--- a/info1.html
+++ b/info1.html
@@ -7,7 +7,7 @@
 	</style>
 </head>
 <body>
-	<a href="index.html"><div align="center"><img src="E:\download1.jpg" alt="intelCore i5 RAM 4GB HDD 500GB Card 2GB"><br/>intel Core i5 RAM 4GB HDD 500GB Card 2GB</div></a>
+	<a href="test.html"><div align="center"><img src="https://pisces.bbystatic.com/BestBuy_US/store/ee/2015/com/pm/nav_desktops_1115.jpg" alt="intelCore i5 RAM 4GB HDD 500GB Card 2GB"><br/>intel Core i5 RAM 4GB HDD 500GB Card 2GB</div></a>
 	<pre align="center">SKU	DN716ELAA3RNVQVNAMZ-6724396
 AC Adapter	Yes
 Bộ vi xử lý	Intel Core i5
