--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<h1>Computer in stock</h1>
-	<a href="info1.html"><div style="text-align: center;"><img src="E:\download1.jpg" alt="intelCore i5 RAM 4GB HDD 500GB Card 2GB"><br/>intel Core i5 RAM 4GB HDD 500GB Card 2GB</div></div></a>
+	<a href="info1.html"><div style="text-align: center;"><img src="https://pisces.bbystatic.com/BestBuy_US/store/ee/2015/com/pm/nav_desktops_1115.jpg" alt="intelCore i5 RAM 4GB HDD 500GB Card 2GB"><br/>intel Core i5 RAM 4GB HDD 500GB Card 2GB</div></div></a>
 	<a href="info2.html"><div style="text-align: center;"><img src="E:\download2.jpg" alt="intelCore i5 RAM 8GB HDD 500GB Card 2GB"><br/>intel Core i5 RAM 8GB HDD 500GB Card 2GB</div></div></a>
 	<a href="info3.html"><div style="text-align: center;"><img src="E:\download3.jpg" alt="i5 2400 VGA 2GB RAM 4GB 500GB"><br/>i5 2400 VGA 2GB RAM 4GB 500GB</div></a>
 	<a href="info4.html"><div style="text-align: center;"><img src="E:\download4.jpg" alt="intel core i72600 card VGA 2GB RAM 16GB 2TB"><br/>intel core i72600 card VGA 2GB RAM 16GB 2TB</div></a>
