BT-Font-Awesome

--- a/Bài tập Font Awesome/Coca Cola 390ml.html
+++ b/Bài tập Font Awesome/Coca Cola 390ml.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Croque Monsieur</title>
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+	<title>Coca Cola 390ml</title>
 	<meta charset="utf-8">
 	<style>
 		<style>
@@ -41,7 +40,14 @@
 				position: relative;
 				left: 500px;
 			}
+			a{
+				font-family: 'Roboto', sans-serif;
+			}
+			li{
+				font-family: 'Roboto', sans-serif;
+			}
 		</style>
+		<script src="https://use.fontawesome.com/b90cb5bee1.js"></script>
 	</head>
 	<body>
 		<div class="all">
@@ -64,17 +70,18 @@
 
 
 
-				<h2>Croque Monsieur</h2></pre>
+				<h2>Coca Cola 390ml</h2></pre>
 				<div class="info">
-					<img src="https://s-media-cache-ak0.pinimg.com/736x/26/67/e8/2667e8a345094800a7ba8a6b0a82e251--grilled-cheese-recipes-grilled-cheeses.jpg">
+					<img src="https://s-media-cache-ak0.pinimg.com/736x/49/c8/87/49c887e46b255b59ede10526106a59b8--coca-cola-bottles-pepsi.jpg">
 					<ul>
-						<li>Croque Monsieur</li>
+						<li>Coca Cola 390ml</li>
 						<ul>
-							<li>Bánh mỳ gối kẹp pho mai và jam bông, phục vụ <br> kèm với khoai tây chiên</li>
-							<li>60.000VND</li>
+							<li>Coca cola chai nhựa 390 ml</li>
+							<li>15.000VND</li>
 						</ul>
 					</ul>
 				</div>
+				<i class="fa fa-asterisk" aria-hidden="true"></i>
 			</div>
 		</body>
 		</html>
