--- a/Bài tập Font Awesome/Nicoise Salad.html
+++ b/Bài tập Font Awesome/Nicoise Salad.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Croque Monsieur</title>
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+	<title>Nicoise Salad</title>
 	<meta charset="utf-8">
 	<style>
 		<style>
@@ -41,7 +40,14 @@
 				position: relative;
 				left: 500px;
 			}
+			a{
+				font-family: 'Roboto', sans-serif;
+			}
+			li{
+				font-family: 'Roboto', sans-serif;
+			}
 		</style>
+		<script src="https://use.fontawesome.com/b90cb5bee1.js"></script>
 	</head>
 	<body>
 		<div class="all">
@@ -64,17 +70,18 @@
 
 
 
-				<h2>Croque Monsieur</h2></pre>
+				<h2>Nicoise Salad</h2></pre>
 				<div class="info">
-					<img src="https://s-media-cache-ak0.pinimg.com/736x/26/67/e8/2667e8a345094800a7ba8a6b0a82e251--grilled-cheese-recipes-grilled-cheeses.jpg">
+					<img src="http://i.mctimg.com/file/a40f6e98c4e5ddebbb99ef1556e31ed183c1ac94/r256x256/cf0dbb4fd4112ba833b64d532bda13502ab747ca6d70ee0eec96e55c7d01ac26">
 					<ul>
-						<li>Croque Monsieur</li>
+						<li>Nicoise Salad</li>
 						<ul>
-							<li>Bánh mỳ gối kẹp pho mai và jam bông, phục vụ <br> kèm với khoai tây chiên</li>
+							<li>Cá ngừ, trứng, cà chua tươi, hành tây, dưa chuột, trứng, pho mai Parmesan</li>
 							<li>60.000VND</li>
 						</ul>
 					</ul>
 				</div>
+				<i class="fa fa-american-sign-language-interpreting" aria-hidden="true"></i>
 			</div>
 		</body>
 		</html>
