--- a/Bài tập Font Awesome/menu.html
+++ b/Bài tập Font Awesome/menu.html
@@ -3,7 +3,6 @@
 <head>
 	<title>Menu</title>
 	<meta charset="utf-8">
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 	<style>
 		*{
 			box-sizing: border-box;
@@ -14,7 +13,6 @@
 		.all {
 			max-width: 1200px;
 			margin: auto;
-
 		}
 		.main > li {
 			float: left;
@@ -52,7 +50,16 @@
 	.spaghetti{
 		float: left;
 	}
-
+	a{
+		font-family: 'Roboto', sans-serif;
+	}
+	li{
+		font-family: 'Roboto', sans-serif;
+	}
+	ul{
+		font-family: 'Roboto', sans-serif;
+	}
+	<script src="https://use.fontawesome.com/b90cb5bee1.js"></script>
 </style>
 </head>
 <body>
@@ -78,6 +85,8 @@
 
 <h2 class="a1">Thực đơn</h2>
 		</pre>
+		<i class="fa fa-adjust" aria-hidden="true"></i>
+	</div>
 		<h2>Pizza</h2>
 		<div class="pizza">
 			<a href="Beefy Pizza.html"><img src="http://images.bigoven.com/image/upload/t_recipe-256/california-pizza-kitchen-pizza-crus.jpg"></a>
@@ -166,7 +175,7 @@
 				</ul>
 			</ul>	
 		</div>
-	</div>
+		
 
 </body>
 </html>
