--- a/Bài tập Font Awesome/Croque Monsieur.html
+++ b/Bài tập Font Awesome/Croque Monsieur.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 	<title>Croque Monsieur</title>
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 	<meta charset="utf-8">
 	<style>
 		<style>
@@ -42,6 +41,7 @@
 				left: 500px;
 			}
 		</style>
+		<script src="https://use.fontawesome.com/b90cb5bee1.js"></script>
 	</head>
 	<body>
 		<div class="all">
@@ -75,6 +75,7 @@
 						</ul>
 					</ul>
 				</div>
+				<i class="fa fa-at" aria-hidden="true"></i>
 			</div>
 		</body>
 		</html>
