--- a/Bài tập Font Awesome/Salami Pizza.html
+++ b/Bài tập Font Awesome/Salami Pizza.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Croque Monsieur</title>
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+	<title>Salami Pizza</title>
 	<meta charset="utf-8">
 	<style>
 		<style>
@@ -41,7 +40,14 @@
 				position: relative;
 				left: 500px;
 			}
+			a{
+				font-family: 'Roboto', sans-serif;
+			}
+			li{
+				font-family: 'Roboto', sans-serif;
+			}
 		</style>
+		<script src="https://use.fontawesome.com/b90cb5bee1.js"></script>
 	</head>
 	<body>
 		<div class="all">
@@ -64,17 +70,20 @@
 
 
 
-				<h2>Croque Monsieur</h2></pre>
+				<h2>Salami Pizza</h2></pre>
 				<div class="info">
-					<img src="https://s-media-cache-ak0.pinimg.com/736x/26/67/e8/2667e8a345094800a7ba8a6b0a82e251--grilled-cheese-recipes-grilled-cheeses.jpg">
+					<img src="https://images-na.ssl-images-amazon.com/images/I/811bCJ1foTL._SL256_.jpg">
 					<ul>
-						<li>Croque Monsieur</li>
+						<li>Salami Pizza *</li>
 						<ul>
-							<li>Bánh mỳ gối kẹp pho mai và jam bông, phục vụ <br> kèm với khoai tây chiên</li>
-							<li>60.000VND</li>
+							<li>Xúc xích salami, hành tây, sốt cà chua, pho mai mozzarella</li>
+							<li>S: 80.000VND</li>
+							<li>M: 100.000VND</li>
+							<li>L: 140.000VND</li>
 						</ul>
 					</ul>
 				</div>
+				<i class="fa fa-anchor" aria-hidden="true"></i>
 			</div>
 		</body>
 		</html>
