--- a/Bài tập Font Awesome/appetizer.html
+++ b/Bài tập Font Awesome/appetizer.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 	<title>Khai vị</title>
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 	<meta charset="utf-8">
 	<style>
 				*{
@@ -54,7 +53,15 @@
 		.a1{
 			text-align: center;
 		}
+		a{
+				font-family: 'Roboto', sans-serif;
+			}
+			li{
+				font-family: 'Roboto', sans-serif;
+			}
+
 	</style>
+	<script src="https://use.fontawesome.com/b90cb5bee1.js"></script>
 </head>
 <body>
 	<div class="all">
@@ -151,6 +158,7 @@
 			</ul>
 		</ul>
 		</div>
+		<i class="fa fa-arrows-h" aria-hidden="true"></i>
 	</div>
 </body>
 </html>
