--- a/Bài tập Font Awesome/index.html
+++ b/Bài tập Font Awesome/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 	<title>Quán ăn Pizza</title>
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 	<meta charset="utf-8">
 	<style>
 		*{
@@ -57,10 +56,15 @@
 			position: relative;
 			left: 780px;
 			bottom: 357px;
-
-
+		}
+		a{
+			font-family: 'Roboto', sans-serif;
+		}
+		pre{
+			font-family: 'Roboto', sans-serif;
 		}
 	</style>
+	<script src="https://use.fontawesome.com/b90cb5bee1.js"></script>
 </head>
 <body>
 	<div class="all">
@@ -122,7 +126,7 @@ tổng đài số:(04) 36.###.###.
 
 Các trường hợp phản ánh chất lượng bánh
 pizza hoặc chất lượng dịch vụ,
-vui lòng gọi số:####.###.###.</pre>
+vui lòng gọi số:####.###.###.<i class="fa fa-user-circle" aria-hidden="true"></i></pre>
 	</div>
 </body>
 </html>
