--- a/Bài tập Font Awesome/sales.html
+++ b/Bài tập Font Awesome/sales.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 	<title>Khuyến mại</title>
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 	<meta charset="utf-8">
 	<style>
 		*{
@@ -51,7 +50,14 @@
 		.main li{
 			list-style-type: none;
 		}
+		a{
+				font-family: 'Roboto', sans-serif;
+			}
+			li{
+				font-family: 'Roboto', sans-serif;
+			}
 	</style>
+	<script src="https://use.fontawesome.com/b90cb5bee1.js"></script>
 </head>
 <body>
 	<div class="all">
@@ -109,6 +115,7 @@
 				<li>Không áp dụng ngày lễ, tết</li>
 			</ul>
 		</pre>
+	<i class="fa fa-archive" aria-hidden="true"></i>
 	</div>
 
 </body>
