--- a/Bài tập tạo trang Image Gallery/Page 3.html
+++ b/Bài tập tạo trang Image Gallery/Page 3.html
@@ -37,14 +37,14 @@
 </head>
 <body>
 	<div class="all">
-		<div id="banner"><img src="http://images3.wikia.nocookie.net/__cb20130116204306/finalfantasy/images/f/fb/XIII-2_PromoPoster-Withoutwatermark2.jpg" alt="Banner-for-FFXIII-series" title="Banner-for-FFXIII-series"></div>
+		<div id="banner"><img src="http://pm1.narvii.com/6406/3d8b623689422d74bc64c0ce87aaf943377c459c_hq.jpg" alt="Banner-for-FFXIII-series" title="Banner-for-FFXIII-series"></div>
 		<a href="index.html">Page 1</a>
 		<a href="Page 2.html">Page 2</a>
 		<a href="Page 3.html">Page 3</a>
 		<div class="img3">
-			<img src="https://punktid.com/sites/default/files/p19ab0kv4pcpj12tt1cq31rtp17bk7.jpg" alt="FFXIII-casts" title="FFXIII-casts">
-			<img src="https://vignette2.wikia.nocookie.net/finalfantasy/images/f/f5/Crystallized_Coccon_at_night.png/revision/latest?cb=20120318031230" alt="Crystallized-Cocoon" title="Crystallized-Cocoon">
-			<img src="http://cdn.akamai.steamstatic.com/steam/apps/292140/header.jpg?t=1447361146" alt="Lightning+FFXIII-2-logo" title="Lightning+FFXIII-2-logo">
+			<img src="http://www.cubed3.com/media/2017/January/nierauto10.jpg">
+			<img src="http://anoncraft.com/wallpaper/hd/146/9s-nier_automata-ruined-city-%281462%29.jpg">
+			<img src="https://s.candybanana.com/images/9838/566bd0dd-9aa0-4787-8647-6e03333b5a58_1_Forest_Zone_Scenery_07_F.jpg">
 		</div>
 	</div>
 
