--- a/Bài tập tạo trang Image Gallery/Page 2.html
+++ b/Bài tập tạo trang Image Gallery/Page 2.html
@@ -38,14 +38,14 @@
 </head>
 <body>
 	<div class="all">
-		<div id="banner"><img src="http://images3.wikia.nocookie.net/__cb20130116204306/finalfantasy/images/f/fb/XIII-2_PromoPoster-Withoutwatermark2.jpg" alt="Banner-for-FFXIII-series" title="Banner-for-FFXIII-series"></div>
+		<div id="banner"><img src="http://pm1.narvii.com/6406/3d8b623689422d74bc64c0ce87aaf943377c459c_hq.jpg" alt="Banner-for-FFXIII-series" title="Banner-for-FFXIII-series"></div>
 		<a href="index.html">Page 1</a>
 		<a href="Page 2.html">Page 2</a>
 		<a href="Page 3.html">Page 3</a>
 		<div class="img2">
-			<img src="http://s3.amazonaws.com/digitaltrends-uploads-prod/2015/04/final-fantasy-13.jpg" alt="Lightning+summon" title="Lightning+summon">
-			<img src="https://vignette2.wikia.nocookie.net/finalfantasy/images/3/36/FF13_Logo.png/revision/latest/scale-to-width-down/350?cb=20160920113249" alt="logo" title="logo">
-			<img src="http://cdn.edgecast.steamstatic.com/steam/apps/292120/header.jpg?t=1447361145" alt="Lightning+logo-2" title="Lightning+logo-2">
+			<img src="https://s.candybanana.com/images/5179/40d1f93a-f3ea-4cf1-b445-0a082ecf4e5b_1_Forest_Zone_Scenery_01_F.jpg" >
+			<img src="https://s.candybanana.com/images/7c7b/e024fcb0-8f8b-4a6e-929b-78fd0665f09e_1_Forest_Zone_Scenery_02.jpg">
+			<img src="http://cdn.edgecast.steamstatic.com/steamcommunity/public/images/items/524220/e84b987f2bf80e856fa63790fc8989b8e8c42060.jpg">
 		</div>
 	</div>
 </body>
