--- a/Bài tập tạo trang Image Gallery/index test.html
+++ b/Bài tập tạo trang Image Gallery/index test.html
@@ -19,7 +19,7 @@
                         border-color: rgb(250, 100, 100);
                 }
 
-                img{
+                .row img{
                         max-width: 320px;
                         height: 178px;
                         margin: 3px;
