--- a/Bài tập tạo trang Image Gallery/index test.html
+++ b/Bài tập tạo trang Image Gallery/index test.html
@@ -11,6 +11,7 @@
                 }
                 #banner img {
                         max-width: 100%;
+                        min-width: 50%;
                         max-height:400px;
                         margin-left: auto;
                         margin-right: auto;
